# GPU-DBMS-project

./: .gitignore  CMakeLists.txt  Makefile  README.md  csvtosql.py  database_script.py  database_script_2.py  history.txt  main  main.cpp  project_structure.txt
data/input/: Employees.csv  Products.csv  SalesOrders.csv  aoz.csv  aoz2.csv  departments.csv  departments.xlsx  departments_big.csv  departments_new.csv  employees.csv  employees.xlsx  employees_big.csv  employees_new.csv  people.csv  projects_big.csv  projects_new.csv  sub_query.csv  sub_query_new.csv
data/output/: query2.csv  query_output.csv  test_output_temp.csv
data/output/test_results/: test_case1.csv  test_case10.csv  test_case11.csv  test_case12.csv  test_case14.csv  test_case16.csv  test_case17.csv  test_case18.csv  test_case19.csv  test_case2.csv  test_case21.csv  test_case22.csv  test_case23.csv  test_case3.csv  test_case4.csv  test_case5.csv  test_case6.csv  test_case7.csv  test_case8.csv  test_case9.csv
include/CLI/: CommandLineInterface.hpp
include/DataHandling/: CSVProcessor.hpp  StorageManager.hpp  Table.hpp
include/Operations/: Aggregator.hpp  Filter.hpp  GPUAggregator.cuh  GPUAggregator.hpp  GPUOrderBy.cuh  Join.hpp  OrderBy.hpp  Project.hpp
include/QueryProcessing/: ASTProcessor.hpp  GPU.hpp  PlanBuilder.hpp  QueryExecutor.hpp  SubqueryHandler.hpp
include/Utilities/: ErrorHandling.hpp  StringUtils.hpp  UnionUtils.hpp
src/: main.cpp
src/CLI/: CommandLineInterface.cpp
src/DataHandling/: CSVProcessor.cpp  StorageManager.cpp  Table.cpp
src/Operations/: Aggregator.cpp  Filter.cpp  GPUAggregator.cu  GPUOrderBy.cu  Join.cpp  OrderBy.cpp  Project.cpp
src/QueryProcessing/: ASTProcessor.cpp  GPU.cu  PlanBuilder.cpp  QueryExecutor.cpp  SubqueryHandler.cpp
src/Utilities/: StringUtils.cpp  UnionUtils.cpp
